hphp/test/slow/async/async-gen-clone.php.expectf
object(HH\AsyncGenerator)#1 (0) {
}

Fatal error: NativeDataInfoCopy is not implemented yet. in %s on line 8
